# axum-todo-app

./: .gitignore  Cargo.toml  rustfmt.toml
.sqlx/: query-019ccebde4c2975cf107143b07102524a62436a03951fe8998174fe6fcc5b2b7.json  query-3e010480151d54890155961f7ebe6b43e122f3e310ad8bcd939aed944972ea1b.json  query-b6942dc18af9754d7d572468f3a6904cac72b10ed6536aae64c75cf843c0ab6b.json
migrations/: 0001_todo.sql
src/: error.rs  lib.rs  main.rs
src/todo_list/: database.rs  list.rs  mod.rs  ramtodo.rs  router.rs  todolist.rs
