[package]
name = "axum-todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
lazy_static = "1.4.0"
rayon = "1.8.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
